--- a/days/day30.html
+++ b/days/day30.html
@@ -85,7 +85,9 @@
 	
       socket.on('user connected30', function(UserId, boardname, board30){
 	  DialogWindow = document.getElementsByClassName('DialogWindow')[0];
-	  Body.removeChild(DialogWindow);
+	  if( typeof DialogWindow != 'indefined'){
+	    Body.removeChild(DialogWindow);
+	  }
           stage = new createjs.Stage("canvas");
           canvas = document.querySelector('canvas');
 	  canvas.style.visibility = "visible";
