--- a/days/day34.html
+++ b/days/day34.html
@@ -94,6 +94,10 @@
           createjs.Touch.enable(stage);
           canvas.width = window.innerWidth;
           canvas.height = window.innerHeight;
+	  firstline = new createjs.Shape();
+          secondline = new createjs.Shape();
+          firstline.graphics.beginFill('#000').drawRect(canvas.width/2-7, 0, 15, canvas.height);
+          secondline.graphics.beginFill('#fff').drawRect(canvas.width/2-6, 0, 13, canvas.height);  
             ID = UserId;
             color = '#'+(Math.random()*0xFFFFFF<<0).toString(16);
             size = RandomNumb(10,30);
@@ -104,7 +108,7 @@
             text = new createjs.Text(boardname, "30px Arial","#000");
             text.x = 20;
             text.y = 20;
-            stage.addChild(window[UserId], text);
+            stage.addChild(window[UserId], text, firstline, secondline);
             createjs.Ticker.addEventListener("tick", onTickHandler);
             socket.emit('user done30',  window[UserId].x,  window[UserId].y, color, size, boardname); 
             stage.on("stagemousemove", function(evt) {
