--- a/days/day36.html
+++ b/days/day36.html
@@ -11,7 +11,7 @@
   <body>
     <div id="canvas"></div>
     <script src="/protoclass.js"> </script>
-    <script src="/test.js"> </script>
+    <script src="/box2d.js"> </script>
     <script src="/main.js"> </script>
   </body>
 </html>
