--- a/days/day36.html
+++ b/days/day36.html
@@ -9,7 +9,13 @@
     <title>Disappearing Tail</title>
   </head> 
   <body>
-    <div id="canvas"></div>
+    <div id="canvas">
+      <div id="score">
+        <p class="numbers" id="left"> 0 </p>
+        <p class="numbers score"> : </p>
+        <p class="numbers" id="right"> 0 </p>
+      </div>
+    </div>
     <script src="/protoclass.js"> </script>
     <script src="/box2d.js"> </script>
     <script src="/main.js"> </script>
