--- a/days/day43.html
+++ b/days/day43.html
@@ -3,7 +3,7 @@
   <head>  
     <link href="/main.css" rel="stylesheet">
     <meta name="viewport"  content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Disappearing Tail</title>
+    <title>43</title>
   </head> 
   <body>
     <div id="canvas"></div>
