--- a/days/day43.html
+++ b/days/day43.html
@@ -7,7 +7,11 @@
   </head> 
   <body>
     <div id="canvas"></div>
-    <div id="stat"></div>
+    <div id="stat">
+      <div id="statX"></div>
+      <div id="statO"></div>
+      <div id="statdraw"></div>
+    </div>
     <script src="/43.js"> </script>
   </body>
 </html>
