--- a/days/day45.html
+++ b/days/day45.html
@@ -14,6 +14,6 @@
       <div id="statO"></div>
       <div id="statdraw"></div>
     </div>
-    <script src="/second.js"> </script>
+    <script src="/45.js"> </script>
   </body>
 </html>
